--- a/_g3/assets/_scss/project/global-nav/_global-nav--design.scss
+++ b/_g3/assets/_scss/project/global-nav/_global-nav--design.scss
@@ -144,4 +144,8 @@ nav.wp-block-navigation.vk-navigation-show-description {
 		text-align: center;
 		white-space: nowrap;
 	}
+	&.is-vertical .wp-block-navigation-item__description,
+	.wp-block-navigation__responsive-container.is-menu-open .wp-block-navigation-item__description {
+		text-align: start;
+	}
 }
